use tower collection

--- a/tower_org.yml
+++ b/tower_org.yml
@@ -5,7 +5,7 @@
   gather_facts: false
   tasks:
   - name: Create tower organization
-    awx.awx.tower_organization:
+    ansible.tower.tower_organization:
       name: test_org
       description: "test org"
       state: present
